--- a/css/styling.css
+++ b/css/styling.css
@@ -70,10 +70,6 @@ a:hover {
   line-height: normal;
 }
 
-#header {
-  border-block-end: solid var(--page_border_thickness) var(--page_border_color);
-}
-
 #sidebar {
   border-inline-end: solid var(--page_border_thickness) var(--page_border_color);
 }
